# projecto-final-skibidipapu

./: README.md
projecto-final-skibidipapu/: CMakeLists.txt  LICENSE  build.bat  build.sh
projecto-final-skibidipapu/data/: sample_data.csv
projecto-final-skibidipapu/docs/: INSTALL.md  TECHNICAL_DESIGN.md
projecto-final-skibidipapu/include/: neural_network.h  nn_activation.h  nn_dense.h  nn_interfaces.h  nn_loss.h  nn_optimizer.h  tensor.h
projecto-final-skibidipapu/src/: main.cpp
projecto-final-skibidipapu/tests/: CMakeLists.txt  test_tensor.cpp
